infrastructure/kustomize/overlays/staging/replicas-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
